har gjort övning 10 nu allt är klart för codereview senare idag

--- a/10_product-component-landscape/index.html
+++ b/10_product-component-landscape/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Flexbox excersice - Product Component</title>
+        <title>Flexbox exercise - Product Component</title>
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
@@ -15,9 +15,9 @@
             </figure>
             <aside>
                 <h1>Adidas Superstar</h1>
-                <h2>2019 Djungle Edition</h2>
+                <h2>2019 Jungle Edition</h2>
                 <p>
-                    It doesnt get any hotter then this. Rule the streets with
+                    It doesn't get any hotter then this. Rule the streets with
                     this new jungle flavored sneakers from Adidas.
                 </p>
                 <button>Take my money!</button>
